clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00037.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00037.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i[2], "x", align 4
        %2 = alloca s32i*, "p", align 8
        %3 = const 0 : s32i
        store %3, %0
        %4 = const 7 : s32i
        %5 = const 1 : s64i
        get_element
        store %4, %6, align 4
        %7 = const 0 : s64i
        get_element
        store %8, %2, align 8
        %9 = load %2 : s32i*, align 8
        %10 = const 1 : s32i
        ptr_stride
        store %11, %2, align 8
        scope {
                %23 = load %2 : s32i*, align 8
                %24 = load %23 : s32i, align 4
                %25 = const 7 : s32i
                cmp
                if %26 {
                        %27 = const 1 : s32i
                        store %27, %0
                        %28 = load %0 : s32i
                        return %28
                }
                yield
        }
        scope {
                %14 = const 1 : s64i
                get_element
                %16 = const 0 : s64i
                get_element
                ptr_diff
                %19 = const 1 : s64i
                cmp
                if %20 {
                        %21 = const 1 : s32i
                        store %21, %0
                        %22 = load %0 : s32i
                        return %22
                }
                yield
        }
        %12 = const 0 : s32i
        store %12, %0
        %13 = load %0 : s32i
        return %13
}
