clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00041.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00041.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "n", align 4
        %2 = alloca s32i, "t", align 4
        %3 = alloca s32i, "c", align 4
        %4 = alloca s32i, "p", align 4
        %5 = const 0 : s32i
        store %5, %0
        %6 = const 0 : s32i
        store %6, %3, align 4
        %7 = const 2 : s32i
        store %7, %1, align 4
        scope {
                while {
                        %36 = load %1 : s32i, align 4
                        %37 = const 5000 : s32i
                        cmp
                        condition %38
                } do {
                        scope {
                                %15 = const 2 : s32i
                                store %15, %2, align 4
                                %16 = const 1 : s32i
                                store %16, %4, align 4
                                scope {
                                        while {
                                                %31 = load %2 : s32i, align 4
                                                %32 = load %2 : s32i, align 4
                                                mul
                                                %34 = load %1 : s32i, align 4
                                                cmp
                                                condition %35
                                        } do {
                                                scope {
                                                        scope {
                                                                %25 = load %1 : s32i, align 4
                                                                %26 = load %2 : s32i, align 4
                                                                rem
                                                                %28 = const 0 : s32i
                                                                cmp
                                                                if %29 {
                                                                        %30 = const 0 : s32i
                                                                        store %30, %4, align 4
                                                                        yield
                                                                }
                                                                yield
                                                        }
                                                        %23 = load %2 : s32i, align 4
                                                        inc
                                                        store %24, %2, align 4
                                                        yield
                                                }
                                                yield
                                        }
                                        yield
                                }
                                %17 = load %1 : s32i, align 4
                                inc
                                store %18, %1, align 4
                                scope {
                                        %19 = load %4 : s32i, align 4
                                        %20 = cast(int_to_bool) %19 : bool
                                        if %20 {
                                                %21 = load %3 : s32i, align 4
                                                inc
                                                store %22, %3, align 4
                                                yield
                                        }
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        scope {
                %10 = load %3 : s32i, align 4
                %11 = const 669 : s32i
                cmp
                if %12 {
                        %13 = const 1 : s32i
                        store %13, %0
                        %14 = load %0 : s32i
                        return %14
                }
                yield
        }
        %8 = const 0 : s32i
        store %8, %0
        %9 = load %0 : s32i
        return %9
}
