clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00042.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00042.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_anon2E0, "u", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 1 : s32i
        get_member
        store %3, %4, align 4
        %5 = const 3 : s32i
        get_member
        store %5, %6, align 4
        scope {
                get_member
                %10 = load %9 : s32i, align 4
                %11 = const 3 : s32i
                cmp
                %13 = ternary %12 ? { : bool
                        %20 = const true : bool
                        yield %20
                } : {
                        get_member
                        %17 = load %16 : s32i, align 4
                        %18 = const 3 : s32i
                        cmp
                        yield %19
                }
                if %13 {
                        %14 = const 1 : s32i
                        store %14, %0
                        %15 = load %0 : s32i
                        return %15
                }
                yield
        }
        %7 = const 0 : s32i
        store %7, %0
        %8 = load %0 : s32i
        return %8
}
