clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00046.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00046.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_s, "v", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 1 : s32i
        get_member
        store %3, %4, align 4
        %5 = const 2 : s32i
        get_member
        get_member
        store %5, %7, align 4
        %8 = const 3 : s32i
        get_member
        get_member
        get_member
        get_member
        store %8, %12, align 4
        %13 = const 4 : s32i
        get_member
        get_member
        store %13, %15, align 4
        scope {
                get_member
                %49 = load %48 : s32i, align 4
                %50 = const 1 : s32i
                cmp
                if %51 {
                        %52 = const 1 : s32i
                        store %52, %0
                        %53 = load %0 : s32i
                        return %53
                }
                yield
        }
        scope {
                get_member
                get_member
                %36 = load %35 : s32i, align 4
                %37 = const 2 : s32i
                cmp
                %39 = ternary %38 ? { : bool
                        get_member
                        get_member
                        %45 = load %44 : s32i, align 4
                        %46 = const 2 : s32i
                        cmp
                        yield %47
                } : {
                        %42 = const false : bool
                        yield %42
                }
                if %39 {
                        %40 = const 2 : s32i
                        store %40, %0
                        %41 = load %0 : s32i
                        return %41
                }
                yield
        }
        scope {
                get_member
                get_member
                get_member
                get_member
                %29 = load %28 : s32i, align 4
                %30 = const 3 : s32i
                cmp
                if %31 {
                        %32 = const 3 : s32i
                        store %32, %0
                        %33 = load %0 : s32i
                        return %33
                }
                yield
        }
        scope {
                get_member
                get_member
                %20 = load %19 : s32i, align 4
                %21 = const 4 : s32i
                cmp
                if %22 {
                        %23 = const 4 : s32i
                        store %23, %0
                        %24 = load %0 : s32i
                        return %24
                }
                yield
        }
        %16 = const 0 : s32i
        store %16, %0
        %17 = load %0 : s32i
        return %17
}
