clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00047.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00047.c" (c, x86_64-unknown-linux-gnu)
global s : rec_anon2E0 = ConstRecord { ty: Named("rec_anon2E0"), members: Array([CirInt { ty: Named("s32i"), value: "1" }, CirInt { ty: Named("s32i"), value: "2" }, CirInt { ty: Named("s32i"), value: "3" }]) } [external, default, align 4, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %18 = get_global @s : rec_anon2E0*
                get_member
                %20 = load %19 : s32i, align 4
                %21 = const 1 : s32i
                cmp
                if %22 {
                        %23 = const 1 : s32i
                        store %23, %0
                        %24 = load %0 : s32i
                        return %24
                }
                yield
        }
        scope {
                %11 = get_global @s : rec_anon2E0*
                get_member
                %13 = load %12 : s32i, align 4
                %14 = const 2 : s32i
                cmp
                if %15 {
                        %16 = const 2 : s32i
                        store %16, %0
                        %17 = load %0 : s32i
                        return %17
                }
                yield
        }
        scope {
                %4 = get_global @s : rec_anon2E0*
                get_member
                %6 = load %5 : s32i, align 4
                %7 = const 3 : s32i
                cmp
                if %8 {
                        %9 = const 3 : s32i
                        store %9, %0
                        %10 = load %0 : s32i
                        return %10
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
